# simple-flotilla

./: README.md  attestation.py  coordinator.py  crypto.py  flotilla.py  flotilla_api.py  flotilla_api_client.py  flotilla_pb2.py  flotilla_rest.py  launch_flotilla.sh  load_cfg.py  pyproject.toml  serde.py  worker.py
cfg/: flotilla.toml  proof.top.toml  worker.0.toml  worker.1.toml  worker.2.toml
protos/: flotilla.proto
src/simple_flotilla/: crypto.py  flotilla.py  flotilla_api.py  flotilla_pb2.py  flotilla_pb2_grpc.py  flotilla_rest.py  worker.py
src/simple_flotilla/protos/: flotilla.proto
